--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav mx-auto mb-2 mb-lg-0 mt-sm-2">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
@@ -31,7 +31,7 @@
   </div>
 </nav>
 <div class="section container" >
-    <div class="card w-75 mx-auto mt-5">
+    <div class="card  mx-auto mt-5">
         <div class="card-body text-center">
           <h1 class="card-title">Unlock the Secrets of Your Love Life with Our Accurate Love Calculator</h1>
           <p class="card-text">Discover the strength of your love with just a few clicks! Our Love Calculator is here to help you find out just how compatible you are with your significant other. Simply enter your names and see the magic unfold. Are you meant to be together forever?</p>
