--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <div class="col-6 mx-auto mx-m-0 text-center mt-5 form-box">
             <form id="findout">
               <label for="Your Name" class="form-label">Your Name</label>
-              <input class="form-control" type="text" placeholder="Partners Name" id="you">
+              <input class="form-control" type="text" placeholder="Your Name" id="you">
               <label for="Partners Name" class="form-label">Partners Name</label>
-              <input class="form-control" type="text" placeholder="Your Fullname" id="partner">
+              <input class="form-control" type="text" placeholder="Partner Name" id="partner">
               <div class="spinner-border mt-3" role="status" id="spinner">
                 <span class="visually-hidden">Loading...</span>
               </div>
