--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <form id="findout">
               <label for="Your Name" class="form-label">Your Name</label>
               <input class="form-control" type="text" placeholder="Your Name" id="you">
-              <label for="Partners Name" class="form-label">Partners Name</label>
+              <label for="Partners Name" class="form-label">Partner Name</label>
               <input class="form-control" type="text" placeholder="Partner Name" id="partner">
               <div class="spinner-border mt-3" role="status" id="spinner">
                 <span class="visually-hidden">Loading...</span>
