--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
   </div>
 </nav>
-<div class="section container" >
+<div class="section container top-card" >
     <div class="card  mx-auto mt-5">
         <div class="card-body text-center">
           <h1 class="card-title">Unlock the Secrets of Your Love Life with Our Accurate Love Calculator</h1>
