--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
 </nav>
 <div class="section container top-card" >
-    <div class="card  mx-auto mt-5">
+    <div class="card  mx-auto mt-2">
         <div class="card-body text-center">
           <h1 class="card-title">Unlock the Secrets of Your Love Life with Our Accurate Love Calculator</h1>
           <p class="card-text">Discover the strength of your love with just a few clicks! Our Love Calculator is here to help you find out just how compatible you are with your significant other. Simply enter your names and see the magic unfold. Are you meant to be together forever?</p>
@@ -40,7 +40,7 @@
       </div>
 </div>
 <div class="main">
-    <div class="row mb-3 mt-2">
+    <div class="row mb-5">
         <div class="col-6 mx-auto mx-m-0 text-center mt-5 form-box">
             <form id="findout">
               <label for="Your Name" class="form-label">Your Name</label>
