--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
     </div>
 </div>
-<div class="section container" id="result">
+<div class="section" id="result">
 
 <script src="/app.js"></script>
 </body>
