--- a/index.html
+++ b/index.html
@@ -43,16 +43,14 @@
     <div class="row mb-5">
         <div class="col-6 mx-auto mx-m-0 text-center mt-5 form-box">
             <form id="findout">
-              <label for="Your Name" class="form-label">Your Name</label>
               <input class="form-control" type="text" placeholder="Your Name" id="you">
-              <label for="Partners Name" class="form-label">Partner Name</label>
               <input class="form-control" type="text" placeholder="Partner Name" id="partner">
               <div class="spinner-border mt-3" role="status" id="spinner">
                 <span class="visually-hidden">Loading...</span>
               </div>
               </form>
               
-              <button class="btn btn-danger mt-0" id="submit">See Compactibility </button>
+              <button class="btn btn-danger my-3" id="submit">See Compactibility </button>
         </div>
     </div>
 </div>
