--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
 </nav>
 <div class="section container top-card" >
-    <div class="card  mx-auto mt-2">
+    <div class="card  mx-auto mt-5">
         <div class="card-body text-center">
           <h1 class="card-title">Unlock the Secrets of Your Love Life with Our Accurate Love Calculator</h1>
           <p class="card-text">Discover the strength of your love with just a few clicks! Our Love Calculator is here to help you find out just how compatible you are with your significant other. Simply enter your names and see the magic unfold. Are you meant to be together forever?</p>
@@ -40,21 +40,21 @@
       </div>
 </div>
 <div class="main">
-    <div class="row mb-5">
+    <div class="row mb-3 mt-5">
         <div class="col-6 mx-auto mx-m-0 text-center mt-5 form-box">
-            <form id="findout">
+            <div id="findout">
               <input class="form-control" type="text" placeholder="Your Name" id="you">
-              <input class="form-control" type="text" placeholder="Partner Name" id="partner">
+              <input class="form-control" type="text" placeholder="Partner name" id="partner">
               <div class="spinner-border mt-3" role="status" id="spinner">
                 <span class="visually-hidden">Loading...</span>
               </div>
-              </form>
+              </div>
               
-              <button class="btn btn-danger my-3" id="submit">See Compactibility </button>
+              <button class="btn btn-danger mt-0" id="submit">See Compactibility</button>  
         </div>
     </div>
 </div>
-<div class="section " id="result">
+<div class="section container" id="result">
 
 <script src="/app.js"></script>
 </body>
